[package]
name = "tmc5160"
version = "0.0.1"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
authors = ["Boris Vinogradov <no111u3@gmail.com>", "Linus Leo Stöckli <https://github.com/hacknus>"]
description = "A platform agnostic TMC5160 Trinamic integrated stepper motor controller"
edition = "2021"
keywords = ["embedded-hal-driver", "motor-controller", "stepper", "tmc5160"]
repository = "https://github.com/no111u3/tmc5160"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
modular-bitfield = "0.11.2"
modular-bitfield-to-value = { version = "*", git = "https://github.com/hacknus/modular-bitfield-to-value"}

[dependencies.embedded-hal]
version = "0.2.2"
features = ["unproven"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
